--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             .Attachment{font-family: Arial, Helvetica, sans-serif; font-weight: bold; color:#6b778c;  position:absolute; 
             margin-left:360px; margin-top: 190px; background-color: white; }
             </style> 
-        <img src="https://i.postimg.cc/cLdLXkFS/Bug-Starbucks-Sign-Up-Last-Name-Error-Message-Location.png" class= "img2" title="screenshot" alt="a screenshot of a bug">
+        <img src="https://github.com/YuhwaUniverse/Portfolio/assets/132421498/774dd9dc-da71-4298-85e7-c14fb7705af7" class= "img2" title="screenshot" alt="a screenshot of a bug">
         <p style="font-family: Arial, Helvetica, sans-serif; font-size: 12px; margin-left: 480px;"><u><em> Uploaded: Starbucks_SignUp_Last name field_bug_screenshot</em></u></p>
         <style>
             .img2 {width:595px; margin-left: 480px; margin-top:180px; border-style: dotted; border-color:darkgray;}
