--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!-- To view this Bug Report in a Webpage Format: https://yuhwauniverse.github.io/webhostingpage/-->
-
+<!-- Or follow the link included in the README.md file --> 
 
 <!DOCTYPE html>
 <html lang="en">
