--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!-- To view this Bug Report in a Webpage Format: https://yuhwauniverse.github.io/webhostingpage/-->
-<!-- Or, clcik on the 'Download Raw File' button on the upper right menu bar --> 
+<!-- Or, click on the 'Download Raw File' button on the upper right menu bar --> 
 
 <!DOCTYPE html>
 <html lang="en">
