--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,6 @@
 
 
-<!-- Page to view the result of pytest UI automation -->
+<!-- Link to view the result of pytest UI automation in a Webpage Format:  -->
 
 <!DOCTYPE html>
 <html>
